--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My App</title>
+  <title>Red Lion Canada</title>
+  <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body>
   <div id="app"></div>
