Added corporation schema.

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,34 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <title>Red Lion Canada</title>
   <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1">
+  <script type='application/ld+json'>
+{
+  "@context": "http://www.schema.org",
+  "@type": "Corporation",
+  "name": "Red Lion Canada",
+  "url": "http://redlioncanada.com",
+  "logo": "http://www.redlioncanada.com/images/Logo-RedLion.svg",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "111 Queen St E #400",
+    "addressLocality": "Toronto",
+    "addressRegion": "Ontario",
+    "postalCode": "M5C 1S2",
+    "addressCountry": "Canada"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": "43.653306",
+    "longitude": " -79.37413"
+  },
+  "openingHours": "Mo, Tu, We, Th, Fr 09:00-05:00",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "416 603 6500",
+    "contactType": "Reception"
+  }
+}
+ </script>
 </head>
 <body>
   <div id="app"></div>
