--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
+<link rel="icon" type="image/png" href="/favicon-32x32.png?v=1" sizes="32x32">
+<link rel="icon" type="image/png" href="/favicon-16x16.png?v=1" sizes="16x16">
+<link rel="manifest" href="/manifest.json?v=1">
+<link rel="mask-icon" href="/safari-pinned-tab.svg?v=1" color="#f3322e">
+<link rel="shortcut icon" href="/favicon.ico?v=1">
+<meta name="apple-mobile-web-app-title" content="Red Lion">
+<meta name="application-name" content="Red Lion">
+<meta name="theme-color" content="#f3322e">
   <title>Red Lion Canada</title>
-  <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="description" content="">
+  <meta name="robots" content="index">
   <script type='application/ld+json'>
 {
   "@context": "http://www.schema.org",
   "@type": "Corporation",
   "name": "Red Lion Canada",
+  "description": "",
   "url": "http://redlioncanada.com",
   "logo": "http://www.redlioncanada.com/images/Logo-RedLion.svg",
   "address": {
@@ -28,7 +39,7 @@
   "openingHours": "Mo, Tu, We, Th, Fr 09:00-05:00",
   "contactPoint": {
     "@type": "ContactPoint",
-    "telephone": "416 603 6500",
+    "telephone": "1 416 603 6500",
     "contactType": "Reception"
   }
 }
