Added meta description.

--- a/app/index.html
+++ b/app/index.html
@@ -13,14 +13,14 @@
 <meta name="theme-color" content="#f3322e">
   <title>Red Lion Canada</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="">
+  <meta name="description" content="Red Lion is an advertising agency based in Toronto. We create everything from traditional communications to social media breakthroughs to lines of clothing.">
   <meta name="robots" content="index">
   <script type='application/ld+json'>
 {
   "@context": "http://www.schema.org",
   "@type": "Corporation",
   "name": "Red Lion Canada",
-  "description": "",
+  "description": "Red Lion is an advertising agency based in Toronto. We create everything from traditional communications to social media breakthroughs to lines of clothing.",
   "url": "http://redlioncanada.com",
   "logo": "http://www.redlioncanada.com/images/Logo-RedLion.svg",
   "address": {
