Updated title tag.

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 <meta name="apple-mobile-web-app-title" content="Red Lion">
 <meta name="application-name" content="Red Lion">
 <meta name="theme-color" content="#f3322e">
-  <title>Red Lion Canada</title>
+  <title>Red Lion Canada | Toronto Ad Agency</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="Red Lion is an advertising agency based in Toronto. We create everything from traditional communications to social media breakthroughs to lines of clothing.">
   <meta name="robots" content="index">
